# jpeg-asm

./: .gitignore  .npmignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  gulpfile.babel.js  gulpfile.js  package-lock.json  package.json
 .github/workflows/: node.js.yml
.github/workflows/: node.js.yml
data/: stamp.xcf
examples/decode/: index.html  index.js
examples/encode/: index.html  index.js
jpegasm/: CMakeLists.txt  api-pre.partial.js  api.c  api.h  api.partial.js  release-api-post.js  release-api-pre.js
lib/: api.js
scripts/: README.md  embuild.sh  exported_functions
scripts/gulp/: config.js
scripts/gulp/lib/: bundle-logger.js  handle-errors.js
scripts/gulp/tasks/: browserify-task.js  browserify.js  default.js
src/bridge/: index.js
src/bridge/lib/: api.js
src/jpegasm/: CMakeLists.txt  api.js
test/: CMakeLists.txt  api-optimized-spec.js  api-spec.cpp  api-spec.h.in  api-spec.js  dist-spec.js
test-release/: small-api-spec.js
test/util/: image.js
